# pgcli

./: README.md  README.rst  pyproject.toml
pgcli/: __main__.py  completion_refresher.py  key_bindings.py  magic.py  main.py  pgbuffer.py  pgclirc  pgcompleter.py  pgexecute.py
