[tool.poetry]
name = "pgcli"
version = "2.4.5"
description = "CLI for Postgres Database. With auto-completion and syntax highlighting."
authors = ["Pgcli Core Team <pgcli-dev@googlegroups.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pgspecial = ">=2.0.0"
click = ">=4.1"
pygments = ">=2.0"
prompt_toolkit = ">=2.0.6,<4.0.0"
psycopg = ">=3.0.14"
sqlparse = ">=0.3.0,<0.5"
configobj = ">=5.0.6"
cli_helpers = { version = ">=2.2.1", extras = ["styles"] }

[tool.poetry.dev-dependencies]
black = "24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.cache
  | \.pytest_cache
  | _build
  | buck-out
  | build
  | dist
  | tests/data
)/
'''
